# amigo-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  tests.yml
docs/: architecture.md  kundali-example.json  personality-x-ray-example.json  personality-x-ray-schema.json  turn-detector.md
docs/tasks/: phase-1-kundali-engine.md  phase-2-astro-profiler.md  phase-3-psychologist-agent.md  phase-4-integration.md  phase-5-persistence.md
src/: agent.py  astrology.py  geocoding.py  guardrails_config.py  models.py  profiler.py  prompts.py  psychologist.py  store.py
src/prompts/: assistant.md  pandit.md  profiler.md  psychologist.md
tests/: test_agent.py  test_astrology.py  test_profiler.py  test_psychologist.py  test_store.py
